Fix potential corruption of RF settings

--- a/conf/PN7150/libnfc-nxp.conf
+++ b/conf/PN7150/libnfc-nxp.conf
@@ -8,12 +8,12 @@
 #  NXPLOG_FWDNLD_LOGLEVEL - Configuration for enabling logging of FW download functionality
 #  NXPLOG_TML_LOGLEVEL - Configuration for enabling logging of TML
 #  NXPLOG_NCIHAL_LOGLEVEL - Configuration for enabling logging of HAL
-NXPLOG_EXTNS_LOGLEVEL=0x00
-NXPLOG_NCIX_LOGLEVEL=0x00
-NXPLOG_NCIR_LOGLEVEL=0x00
-NXPLOG_FWDNLD_LOGLEVEL=0x00
-NXPLOG_TML_LOGLEVEL=0x00
-NXPLOG_NCIHAL_LOGLEVEL=0x00
+NXPLOG_EXTNS_LOGLEVEL=0x03
+NXPLOG_NCIX_LOGLEVEL=0x03
+NXPLOG_NCIR_LOGLEVEL=0x03
+NXPLOG_FWDNLD_LOGLEVEL=0x03
+NXPLOG_TML_LOGLEVEL=0x03
+NXPLOG_NCIHAL_LOGLEVEL=0x03
 
 ###############################################################################
 # Extension for MIFARE reader enable
@@ -75,11 +75,9 @@ NXP_EXT_TVDD_CFG_2={20, 02, 07, 01, A0, 0E, 03, 06, 64, 00}
 ###############################################################################
 # NXP Proprietary core configuration extensions
 # For more details refer to the NFC Controller User Manual
-NXP_CORE_CONF_EXTN={20, 02, 24, 04,
+NXP_CORE_CONF_EXTN={20, 02, 09, 02,
     A0, 5E, 01, 01,
-    A0, 40, 01, 00,
-    A0, 0D, 04, 34, 44, 22, 00,
-    A0, 1D, 11, 57, 33, 14, 17, 00, AA, 85, 00, 80, 55, 2A, 04, 00, 63, 00, 00, 00
+    A0, 40, 01, 00
 }
 
 ###############################################################################
@@ -107,7 +105,7 @@ NXP_CORE_CONF={ 20, 02, 2B, 0D,
 ###############################################################################
 # RF configuration settings
 # Below settings relates to OM5578 demo kit RF performance optimization
-NXP_RF_CONF_BLK_1={20, 02, B7, 14,
+NXP_RF_CONF_BLK_1={ 20, 02, A3, 13,
     A0, 0D, 06, 04, 35, 90, 01, F4, 01,
     A0, 0D, 06, 06, 44, 01, 90, 03, 00,
     A0, 0D, 06, 06, 30, B0, 01, 10, 00,
@@ -126,6 +124,9 @@ NXP_RF_CONF_BLK_1={20, 02, B7, 14,
     A0, 0D, 06, 44, 42, 88, 00, FF, FF,
     A0, 0D, 06, 56, 2D, 05, 9F, 0C, 00,
     A0, 0D, 06, 54, 42, 88, 00, FF, FF,
-    A0, 0D, 06, 0A, 33, 80, 86, 00, 70,
+    A0, 0D, 06, 0A, 33, 80, 86, 00, 70
+}
+
+NXP_RF_CONF_BLK_2={ 20, 02, 15, 01,
     A0, 1D, 11, 57, 33, 14, 17, 00, AA, 85, 00, 80, 55, 2A, 04, 00, 63, 00, 00, 00
 }
